--- a/Tubes2/Graf/grafGUI/grafGUI/MainWindow.xaml
+++ b/Tubes2/Graf/grafGUI/grafGUI/MainWindow.xaml
@@ -4,10 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:grafGUI"
+        xmlns:gv="clr-namespace:Microsoft.Msagl.GraphViewerGdi;assembly=Microsoft.Msagl.GraphViewerGdi"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="MainWindow" Height="650" Width="800">
+        Title="Simulasi CORONA" Height="692" Width="800">
+
     <Border Padding="10">
+
         <StackPanel>
             <!-- Open files -->
             <TextBlock Margin="0, 10, 0, 0" Text="File konfigurasi kota " FontWeight="Bold" FontSize="15" />
@@ -19,7 +22,7 @@
 
                 <StackPanel Grid.Column="0" Margin="0, 0, 10, 0">
                     <TextBlock Margin="0, 10, 0, 0" Text="Pilih file populasi kota: " FontSize="14" />
-                    <TextBox Margin="0, 10, 0, 10" x:Name="ChoosenFile" Padding="2" Height="20" />
+                    <TextBox Margin="0, 10, 0, 10" x:Name="ChoosenFile" Padding="2" />
                     <Grid Margin="0,10,0,0" Height="25">
 
                         <Button x:Name="OpenfilesButton" Click="button1_Click" Margin="0 0 0 0" Content="Choose file.." />
@@ -28,7 +31,7 @@
                 </StackPanel>
                 <StackPanel Grid.Column="1" Margin="10, 0, 0, 0">
                     <TextBlock Margin="0, 10, 0, 0" Text="Pilih file hubungan kota: " FontSize="14" />
-                    <TextBox Margin="0, 10, 0, 10" x:Name="ChoosenFile2" Padding="2" Height="20" />
+                    <TextBox Margin="0, 10, 0, 10" x:Name="ChoosenFile2" Padding="2"/>
                     <Grid Margin="0,10,0,0" Height="25">
 
                         <Button x:Name="OpenfilesButton2" Click="button2_Click" Margin="0 0 0 0" Content="Choose file.." />
@@ -41,18 +44,59 @@
 
             <!-- Query hari -->
             <TextBlock Margin="0, 10, 0, 0" Text="Hari ke: " FontSize="15" />
-            <TextBox x:Name="Query" Padding="2" Height="20" />
-            <Grid Margin="0,10,0,0" Height="25">
 
+            <Grid Margin="0,0,0,0">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="60"/>
+                    <ColumnDefinition Width="60"/>
                 </Grid.ColumnDefinitions>
 
-                <Button x:Name="QueryButton" Click="button3_Click" Margin="0 0 0 0" Grid.Column="0" Content="Simulate" />
+                <StackPanel Grid.Column="0" Margin="0,0,0,0">
+                    <TextBox x:Name="Query" Padding="2" Margin="0,0,5,0"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="1" Margin="0,0,0,0">
+                    <Button x:Name="Prev" Click="button5_Click" Margin="5,0,5,0" Content="&lt;&lt;"/>
+                </StackPanel>
+
+                <StackPanel Grid.Column="2" Margin="0,0,0,0">
+                    <Button x:Name="Next" Click="button4_Click" Margin="5,0,5,0" Content=">>" />
+                </StackPanel>
 
             </Grid>
 
-            <TextBox Margin="0, 20, 0, 0"  x:Name="Hasil" Padding="2" Height="300" />
+            <Button x:Name="QueryButton" Click="button3_Click" Margin="0 10 0 10" Grid.Column="0" Content="Simulate" />
+            <Grid Margin="0,10,0,0" Height="300">
+
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel Grid.Column="0" Margin="0, 0, 10, 0">
+
+                    <TextBlock Margin="0, 0, 0, 0" Text="Daftar Kota yang Terinfeksi: " FontSize="15"/>
+                    <TextBox Margin="0,40,0,5" Padding="2" x:Name="Hasil"  Height="200"/>
+
+                </StackPanel>
+
+
+                <StackPanel Grid.Column="2" Margin="10, 0, 0, 0">
+                    <TextBlock Margin="0, 0, 0, 0" Text="Gambar Graf: " FontSize="15"/>
+
+                    <Grid Margin="0,10,0,0" Height="300">
+
+                        <WindowsFormsHost x:Name="windowsFormsHost1" Margin="10,20,0,0">
+                            <gv:GViewer x:Name="gViewer"/>
+                        </WindowsFormsHost>
+
+                    </Grid>
+                </StackPanel>
+
+            </Grid>
+
         </StackPanel>
     </Border>
+
 </Window>
